# LampVisualizer

./: README.md  pyproject.toml  setup.cfg
src/: main.py
src/lamp_visualizer/: __init__.py
