[metadata]
name = lamp_visualizer
version = 1.0.0
author = RevolvingMadness
author_email = revolvingmad@gmail.com
description = A Python library that visualizes redstone lamps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RevolvingMadness/LampVisualizer
project_urls =
    Bug Tracker = https://github.com/RevolvingMadness/LampVisualizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src